--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 title: BigFix Performance & Capacity Planning Resources
-description: BigFix: Find and fix all endpoints... fast!
+description: "BigFix: Find and fix all endpoints... fast!"
 show_downloads: true
 google_analytics:
